# control-software

./: .gitignore  Cargo.toml  Embed.toml  README.md  asm  asm_original  build.rs  custom_link.x  esc_controlled.rs  openocd.cfg
.cargo/: config.toml
.github/: ignore.txt
.github/workflows/: embedded.yml  lib.yml  logging.yml  logging.yml.future  spelling.yml
docs/: workflow.md
esp32_can/: Cargo.toml  build.rs  rust-toolchain.toml  sdkconfig.defaults
esp32_can/.cargo/: config.toml
esp32_can/.devcontainer/: devcontainer.json
esp32_can/docs/: README.md
esp32_can/examples/: can_esp32.rs
esp32_can/scripts/: flash.sh
esp32_can/src/drivers/: can.rs  message.rs
examples/: MA732.rs  candriver.rs  candriver_pcb_test.rs  candriver_protocol.rs  esc_event_count.rs  hlc.rs  hx711.rs  hx711_test.rs  sensor.rs
lib/: Cargo.toml  README.md
lib/.cargo/: config.toml
lib/src/: constants.rs  gain_scheduled.rs  lib.rs  pid.rs  protocol.rs  wrapper.rs
lib/src/protocol/: constants.rs  message.rs  sender.rs
logging/: Cargo.toml
logging/logging_test/: Cargo.toml
logging/logging_test/src/: main.rs
logging/src/: lib.rs  serializer.rs
new_protocol/: Cargo.toml
new_protocol/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
sims/: svm.slx
src/: bldc.rs  boards.rs  cart.rs  drivers.rs  gain_scheduled.rs  lib.rs  logging.rs  main.rs  pid.rs  protocol.rs  svm.rs  util.rs
src/boards/: event.rs
src/drivers/: MA732.rs  can.rs  hx711.rs  message.rs
src/hlc_utils/: config.rs  core.rs  events.rs  mod.rs  stype_calibration.rs
statics/: Cargo.toml
statics/src/: lib.rs
