[package]
name = "controller"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-rtt = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
#nrf52840-hal = { git = "ssh://git@github.com/Ltu-Bike-trailer/nrf-hal.git", rev = "320bd06661256e91ecde4dc51550dc2c176bc36a", features = [
nrf52840-hal = { path = "../nrf-hal/nrf52840-hal", features = [
    "rt",
], default-features = false }
rtic-monotonics = { version = "2.0.2", features = [
    "cortex-m-systick",
    "nrf52840",
] }
rtic-sync = "1.3.0"
embedded-hal = "1.0.0"
statics = { path = "./statics" }

lib = { path = "./lib", default-features = false }
# Helpers

## Defines a double ended queue implementation of arrays instead of vectors
arraydeque = { version = "0.5.1", default-features = false }

bsp = { path = "../Power-supply/bsp", package = "battery-controller" }
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false # <-
incremental = false
lto = 'fat'
overflow-checks = false  # <-
strip = "debuginfo"
opt-level = 3

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-


[features]


# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
