[package]
name = "controller"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-rtt = { version = "0.4" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
#nrf52840-hal = { git = "https://github.com/Ltu-Bike-trailer/nrf-hal.git", features = [
nrf52840-hal = { path = "../nrf-hal/nrf52840-hal", features = [
    "rt",
], default-features = false }
rtic-monotonics = { version = "2.0.2", features = [
    "cortex-m-systick",
    "nrf52840",
] }
rtt-target = "0.6.0"
rtic-sync = "1.3.0"
embedded-hal = "1.0.0"
statics = { path = "./statics" }

lib = { path = "./lib", default-features = false }
# Helpers

#esc = { package = "bsp", git = "https://github.com/Ltu-Bike-trailer/ESC.git", branch = "bsp", optional = true, default-features = false}
esc = { package = "bsp", path = "../ESC/bsp", optional = true, default-features = false }

## Defines a double ended queue implementation of arrays instead of vectors
arraydeque = { version = "0.5.1", default-features = false }
embedded-can = "0.4.1"
nb = "1.1.0"
paste = "1.0.15"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-


# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false # <-
incremental = false
lto = 'fat'
overflow-checks = false  # <-
strip = false            #"debuginfo"
opt-level = 3

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-


[features]
esc = ["dep:esc"]
default = ["esc"]

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
