[package]
name = "esp32_can"
version = "0.1.0"
authors = ["wiiggee1 <viktor@smedberg.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
name = "esp32_can"  # Optional, defaults to the package name
crate-type = ["lib"]  # Specify the type of library (e.g., static or shared)
path = "src/lib.rs"   # Default location, change if needed
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
#default = ["std", "hal", "esp-idf-sys/native"]
#default = []
#experimental = ["esp-idf-svc/experimental"]

default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4.17", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false, features = ["alloc", "embassy-sync"] }
#esp-idf-sys = { version = "0.35.0", default-features = false }
esp-idf-hal = "0.44.1"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-svc = { version = "0.25", optional = true, default-features = false }
embedded-io = "0.6.1"
embedded-hal-nb = "1.0.0"
anyhow = "1.0.93"
#esp-println = { version = "0.12.0", features = ["esp32c3"]}


[build-dependencies]
anyhow = "1.0.93"
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released

[patch.crates-io]
# see: https://github.com/esp-rs/espup/issues/440
clang-sys = { git = "https://github.com/taks/clang-sys.git", branch = "load_with_flags"}
