[package]
name = "lib"
version = "0.2.0"
edition = "2021"

[dependencies]
heapless = "0.8.0"
embedded-can = "0.4.1"
statics = { path = "../statics" }
arraydeque = { version = "0.5.1", default-features = false }
can_mcp2515 = { git = "https://github.com/wiiggee1/can_mcp2515" }

[features]
std = []
default = ["std"]
